--- a/08/estilos.css
+++ b/08/estilos.css
@@ -78,7 +78,7 @@ h1 {
   font-family: "Times New Roman", "Times", serif;
   font-weight: lighter;
   font-size: 45pt;
-  line-height: 50px;
+  line-height: 58px;
 }
 
 
@@ -116,7 +116,8 @@ article {
 
 .negritados {
   font-weight: bolder;
-  font-size: 13pt;
+  font-size: 15pt;
+  font-family: sans-serif;
   margin-top: 35px;
   display: block;
   text-align: left;
@@ -182,7 +183,7 @@ footer {
 hr {
   width: 500px;
   margin-bottom: 10px;
-  height: 2px;
+  height: 1px;
   border-width: 0;
   background-color: darkgrey;
 }
