--- a/09/main.css
+++ b/09/main.css
@@ -1,32 +1,30 @@
 header {
-    background-color: lightslategrey;
-    text-align: center;
-    padding: 10px;
+   margin-top: 100px;
 }
 
 body {
-    background-color:gainsboro; 
+    background-color: white; 
 
 }
 
-h1 {
-    color:azure;
-    
-}
 
 h2 {
     text-align: center;
-    padding-top: 10px;
     color: black;
-    
+    font-family: 'HAPPY DOODLE', sans-serif;
+    font-size: 50px;
+    letter-spacing: 5px;
+                                                
 }
 
 
 img {
-    width: 25%;
-    height:200px;
-    margin: 50px;
-     
+    
+}
+
+section {
+align-content: center;
+margin: auto;
 }
 
 .img1{
@@ -43,6 +41,8 @@ img {
 
 .img4{
     filter: blur(10px);
+    weight:500px;
+    height:500px;
 }
 
 .img5{
@@ -54,7 +54,9 @@ img {
 }
 
 .img7{
-    filter: drop-shadow(16px 16px 20px blue);
+    filter: drop-shadow(16px 16px 20px yellow);
+    width: 400px;
+    height: 400px;
 }
 
 .img8{
