--- a/09/main.css
+++ b/09/main.css
@@ -1,72 +1,77 @@
 header {
-   margin-top: 100px;
+    margin-top: 100px;
 }
 
 body {
-    background-color: white; 
+    background-color: white;
 
 }
 
 
 h2 {
     text-align: center;
-    color: black;
+    color: white;
     font-family: 'HAPPY DOODLE', sans-serif;
-    font-size: 50px;
+    font-size: 100px;
     letter-spacing: 5px;
-                                                
+    filter: drop-shadow(0px 0px 20px white);
+
+
 }
 
 
-img {
-    
+
+
+.titulo {
+    position: absolute;
+    top: 61%;
+    left: 47.5%;
+    transform: translate(-50%, -50%);
 }
 
-section {
-align-content: center;
-margin: auto;
+.img1 {
+    filter: none;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    display: block;
 }
 
-.img1{
-    filter:invert(1);
-}
-
-.img2{
+.img2 {
     filter: opacity(0.5);
 }
 
-.img3{
+.img3 {
     filter: sepia(50%);
 }
 
-.img4{
+.img4 {
     filter: blur(10px);
-    weight:500px;
-    height:500px;
+    height: 150px;
 }
 
-.img5{
+.img5 {
     filter: hue-rotate(240deg);
 }
 
-.img6{
+.img6 {
     filter: contrast(2);
 }
 
-.img7{
+.img7 {
     filter: drop-shadow(16px 16px 20px yellow);
     width: 400px;
     height: 400px;
 }
 
-.img8{
-    filter:brightness(60%);
+.img8 {
+    filter: brightness(60%);
 }
 
-.img9{
+.img9 {
     filter: blur(1px);
 }
 
 a:hover img {
-    filter:none;
+    filter: none;
 }
