--- a/09/main.css
+++ b/09/main.css
@@ -31,23 +31,33 @@ h2 {
 
 .img1 {
     filter: none;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 0;
     width: 100%;
     display: block;
 }
 
 .img2 {
     filter: opacity(0.5);
+    margin-top: 50px;
 }
 
 .img3 {
     filter: sepia(50%);
+    height: 300px;
+    margin-top: auto;
+    margin-bottom: 200px;
+    margin-left: 12px;
 }
 
 .img4 {
     filter: blur(10px);
     height: 150px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    margin-left: 50px;
+    margin-right: 50px;
 }
 
 .img5 {
@@ -59,7 +69,7 @@ h2 {
 }
 
 .img7 {
-    filter: drop-shadow(16px 16px 20px yellow);
+    filter: drop-shadow(16px 16px 4px rgb(255, 58, 140));
     width: 400px;
     height: 400px;
 }
@@ -69,7 +79,11 @@ h2 {
 }
 
 .img9 {
-    filter: blur(1px);
+    
+    width: 99.9%;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
 }
 
 a:hover img {
