--- a/11/estilos.css
+++ b/11/estilos.css
@@ -140,7 +140,29 @@ p {
 }
 
 
+.ightbox {
+    position: fixed;
+    top:0;
+    left:0;
+    background: rgba (0,0,0,.5);
+    transition: transform .3s ease-in-out;
+    width: 100%;
+    height: 100vh;
+    z-index: 1000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: scale(0);
+}
 
+.lightbox img {
+    width:75vw;
+    height: 70vh;
+}
+
+.lightbox:target {
+    transform: scale(1);
+}
 
 
 @media (max-width: 800px) {
