--- a/11/estilos.css
+++ b/11/estilos.css
@@ -298,7 +298,7 @@ transition: 3s;
     height: 30px;
     width: 30px;
     top: center;
-    left: 100px;
+    left: 5%;
     line-height: 30px;
     text-decoration: none;
     text-align: center;
@@ -314,7 +314,7 @@ transition: 3s;
     height: 30px;
     width: 30px;
     top: center;
-    right: 100px;
+    right: 5%;
     line-height: 30px;
     text-decoration: none;
     text-align: center;
